src/tests/test-src/errors/E77-alias-reserved-std.syntran
// E77: alias-reserved-std
// The module alias `std` is reserved and cannot be reused

use foo as std;
